tests/traci/get_variable/Vehicle/errors/UnknownID/testclient_out.traci
TraCITestClient output file. Date: Fri Aug 16 10:23:04 2019


-> Command sent: <SimulationStep>:
.. Command acknowledged (2), [description: ]

-> Command sent: <GetVariable>:
  domID=164 varID=64 objID=xxx
.. Answered with error to command (164), [description: Vehicle 'xxx' is not known.]

-> Command sent: <SimulationStep>:
.. Command acknowledged (2), [description: ]

-> Command sent: <Close>:
.. Command acknowledged (127), [description: ]
